Fixed bugs so that all cards are hidden at start of game, fixed bug so that modal appears at higher z-index than game

--- a/css/app.css
+++ b/css/app.css
@@ -110,6 +110,7 @@ h1 {
 
 .report__background {
     position: absolute;
+    z-index: 80;
     top: 0;
     left: 0;
     height: 150%;
@@ -148,6 +149,7 @@ h1 {
 
 .report__body {
     position: relative;
+    z-index: 99;
     width: 400px;
     top: 50%;
     left: 50%;
